--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
     <body>
       <div id="react-app-root"></div>
     </body>
-    <script src="index.js"></script>
+    <script src="index.jsx"></script>
     </html>
